force-app/main/default/objects/ImagenesOferta__c/ImagenesOferta__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ImágenesOferta</label>
</CustomObject>