force-app/main/default/objects/ImagenesOferta__c/fields/Duracion__c.field-meta.xml
<CustomField>
    <fullName>Duracion__c</fullName>
    <label>Duracion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>