force-app/main/default/objects/ImagenesOferta__c/fields/ImagenBase64__c.field-meta.xml
<CustomField>
    <fullName>ImagenBase64__c</fullName>
    <label>ImagenBase64</label>
    <length>200</length>
    <type>Text</type>
</CustomField>