force-app/main/default/objects/ImagenesOferta__c/fields/Oferta__c.field-meta.xml
<CustomField>
    <fullName>Oferta__c</fullName>
    <label>Oferta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>