force-app/main/default/objects/ImagenesOferta__c/fields/ResolucionAnticipada__c.field-meta.xml
<CustomField>
    <fullName>ResolucionAnticipada__c</fullName>
    <label>ResolucionAnticipada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>