force-app/main/default/objects/ImagenesOferta__c/fields/TramoConsumo__c.field-meta.xml
<CustomField>
    <fullName>TramoConsumo__c</fullName>
    <label>TramoConsumo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>