force-app/main/default/objects/ImagenesOferta__c/listViews/Ver_bien.listView-meta.xml
<ListView>
    <fullName>Ver_bien</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>Duracion__c</columns>
    <columns>ImagenBase64__c</columns>
    <columns>Oferta__c</columns>
    <columns>TramoConsumo__c</columns>
    <columns>ResolucionAnticipada__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ver bien</label>
    <language>es</language>
</ListView>